Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <h3>
 <a name="easy-installer-for-debian" class="anchor" href="#easy-installer-for-debian"><span class="octicon octicon-link"></span></a>Easy Installer for Debian</h3>
 
-<pre><code>wget  --no-check-certificate "https://myfiles.keysource.be/public.php?service=files&amp;t=cc6cd81de5995be3ffee7479dd8bbb90&amp;download" -O installer-openkeyos.sh
+<pre><code>wget "http://www.openkeyos.org/download/installer/installer-openkeyos.sh" -O installer-openkeyos.sh
 chmod +x installer-openkeyos.sh
 
 </code></pre>
